--- a/EnlightenMe/app/src/main/AndroidManifest.xml
+++ b/EnlightenMe/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.EnlightenMe"
         tools:targetApi="31">
         <activity
+            android:name=".PTSD_buttons"
+            android:exported="false" />
+        <activity
+            android:name=".PD_buttons"
+            android:exported="false" />
+        <activity
+            android:name=".GAD_buttons"
+            android:exported="false" />
+        <activity
             android:name=".PTSD_symp_intensity"
             android:exported="false" />
         <activity
@@ -23,7 +32,7 @@
             android:name=".PTSD_symp_chanThinkMood"
             android:exported="false" />
         <activity
-            android:name=".PYSD_symp_avoidance"
+            android:name=".PTSD_symp_avoidance"
             android:exported="false" />
         <activity
             android:name=".PTSD_symp_intrusive"
