--- a/EnlightenMe/app/src/main/AndroidManifest.xml
+++ b/EnlightenMe/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.EnlightenMe"
         tools:targetApi="31">
         <activity
+            android:name=".GAD_symptoms_3"
+            android:exported="false" />
+        <activity
+            android:name=".GAD_symptoms_2"
+            android:exported="false" />
+        <activity
+            android:name=".GAD_overview_3"
+            android:exported="false" />
+        <activity
+            android:name=".GAD_overview_2"
+            android:exported="false" />
+        <activity
             android:name=".Dep_symptoms_2"
             android:exported="false" />
         <activity
