--- a/EnlightenMe/app/src/main/AndroidManifest.xml
+++ b/EnlightenMe/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.EnlightenMe"
         tools:targetApi="31">
         <activity
+            android:name=".PTSD_sym_buttons"
+            android:exported="false" />
+        <activity
             android:name=".PTSD_symptoms_2"
             android:exported="false" />
         <activity
